[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Markus Zhang <markuszhang8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.115"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
